(Fix): Aligns the mobile nav menu properly to the top.
Problem
The positioning was off and there was too much space at the top.
This was showing some content underneath and it was awkward!

Fix
Reduce the top attribute value.

Closes #67

--- a/addons/adventure_log/finnito/adventurelog-theme/resources/css/theme.css
+++ b/addons/adventure_log/finnito/adventurelog-theme/resources/css/theme.css
@@ -494,7 +494,7 @@ nav {
   position: absolute;
   left: -1.5rem;
   height: calc(100vh - 5rem);
-  top: 5rem;
+  top: 4rem;
   transition: all 300ms;
   padding: 0.5rem;
   box-sizing: border-box;
